[tool.poetry]
name = "timesfm"
packages = [
    { include = "timesfm", from = "src" },
    { include = "finetuning", from = "src" },
]
description = "Open weights time-series foundation model from Google Research."
version = "1.3.0+py312fork2"
authors = [
    "Rajat Sen <senrajat@google.com>",
    "Yichen Zhou <yichenzhou@google.com>",
    "Abhimanyu Das <abhidas@google.com>",
    "Petros Mol <pmol@google.com>",
    "Justin Güse <guese.justin@gmail.com>",
    "Michael Chertushkin <chertushkinmichael@gmail.com>"
]
readme = "README.md"
keywords = ["time series", "timesfm", "forecast", "time series model"]
homepage = "https://github.com/google-research/timesfm"
repository = "https://github.com/google-research/timesfm"
classifiers = [
    "Environment :: Console",
    "Framework :: Flake8",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
einshape = ">=1.0.0"
numpy = ">=1.26.4"
pandas = ">=2.0.0"
utilsforecast = ">=0.1.10"
huggingface_hub = { version = ">=0.23.0", extras = ["cli"] }
scikit-learn = ">=1.2.2"
typer = ">=0.12.3"
wandb = ">=0.17.5"
absl-py = ">=1.4.0"
safetensors = "^0.5.3"

[tool.poetry.extras]
# (Optional) keep only pax extra; torch will be installed by the user.
pax = ["paxml", "lingvo", "jax", "jaxlib"]

[tool.poetry.dependencies.paxml]
version = ">=1.4.0"
python = ">=3.10,<3.11"
optional = true

[tool.poetry.dependencies.lingvo]
version = ">=0.12.7"
python = ">=3.10,<3.11"
optional = true

[tool.poetry.dependencies.jax]
version = ">=0.4.26"
extras = ["cuda12"]
python = ">=3.10,<3.12"
optional = true

[tool.poetry.dependencies.jaxlib]
version = ">=0.4.26"
python = ">=3.10,<3.12"
optional = true

[tool.poetry.dependencies.torch]
version = ">=2.3.0"       # 2.3+ has Py3.12 wheels
# extras = ["cuda"]        # (optional) torch doesn't expose a 'cuda' extra; safest is to drop this
python = ">=3.11,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
